--- a/sections/s3.md
+++ b/sections/s3.md
@@ -372,6 +372,8 @@
   - Object storage clustering available
 - All: Can run EC2 Instances & AWS Lambda functions (using AWS IoT Greengrass)
 - Long-term deployment options: 1 and 3 years discounted pricing
+- ![Screenshot 2024-04-04 at 3 26 25 PM](https://github.com/TimBenn/AWS-Certified-Cloud-Practitioner-Notes/assets/32439480/81cf1489-de12-4242-a65c-61deb932b396)
+
 
 ## AWS OpsHub
 
